<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_peliculas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="325dp"
        android:layout_height="153dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rb_pelicula1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_pelicula1" />

        <RadioButton
            android:id="@+id/rb_pelicula2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_pelicula2" />

        <RadioButton
            android:id="@+id/rb_pelicula3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_pelicula3" />

        <RadioButton
            android:id="@+id/rb_pelicula4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_pelicula4" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_horarios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="326dp"
        android:layout_height="114dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rb_horario1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_horario1" />

        <RadioButton
            android:id="@+id/rb_horario2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_horario2" />

        <RadioButton
            android:id="@+id/rb_horario3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_horario3" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_reservar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        android:onClick="Reservar"
        android:text="@string/btn_reservar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <Button
        android:id="@+id/btn_eliminar_reservas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/btn_eliminar_reservas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ver_reservas" />

    <Button
        android:id="@+id/btn_ver_reservas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:onClick="MostrarReservas"
        android:text="@string/btn_ver_reservas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reservar" />

    <Button
        android:id="@+id/btn_regresar_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/btn_regresar_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar_reservas" />
</androidx.constraintlayout.widget.ConstraintLayout>